--- a/layout_parts/q10/css/style.css
+++ b/layout_parts/q10/css/style.css
@@ -1,5 +1,49 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.q10-outer {
+  position: relative;
+  width: 500px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 5px solid #222;
+  border-radius: 30px;
+  /* word-break: break-all; */
+}
+/* .q10-outer:after{
+  position: absolute;
+  width: 0;
+  height: 0;
+  left: 30px;
+  bottom: -20px;
+  border-style: solid;
+  border-color: transparent transparent transparent #222;
+  border-width: 10px 0 10px 17.32px;
+  transform: rotate(90deg);
+  content: "";
+} */
 
+.q10-outer:before{
+  position: absolute;
+  top: 155px;
+  left: 50px;
+  border-style: solid;
+  border-color: #222 transparent transparent transparent;
+  border-width: 30px 30px 0px 30px;
+  content: "";
+}
+.q10-outer:after{
+  position: absolute;
+  top: 148px;
+  left: 50px;
+  border-style: solid;
+  border-color: #fff transparent transparent transparent;
+  border-width: 30px 30px 0px 30px;
+  z-index: 10;
+  content: "";
+}
+.text {
+  font-size: 16px;
+  line-height: 16px;
+}
 /* 回答はここに書いてね */
