--- a/layout_parts/q2/css/style.css
+++ b/layout_parts/q2/css/style.css
@@ -1,5 +1,28 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.q2 {
+  width:940px;
+  margin: 0 auto;
+  padding: 20px;
+  box-sizing: border-box;
+  background-color: #eff3f4;
 
+}
+.baroon {
+  float:left;
+  margin-right: 20px;
+  margin-bottom: 10px;
+}
+.bar {
+  float:right;
+  margin-left: 20px;
+  margin-bottom: 10px;
+}
+.text {
+  font-size: 18px;
+  line-height: 22px;
+  width:100%;
+  word-break: break-all;
+}
 /* 回答はここに書いてね */
