--- a/layout_parts/q4/css/style.css
+++ b/layout_parts/q4/css/style.css
@@ -1,5 +1,50 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.clearfix:after {
+  display: block;
+  content: "";
+  clear: both;
+}
+.content {
+  padding: 20px;
+  box-sizing: border-box;
+}
+.content-line {
+  display: table;
+  margin-top: 20px;
+  width:100%;
+}
+.content-line:first-child {
+  margin-top:0px;
+}
 
+.cell {
+  display: table-cell;
+  padding: 20px;
+  text-align: center;
+}
+
+.up-left {
+  width: 100px;
+  background-color: #fdc8b8;
+}
+.up-center {
+  background-color: #e0abd9;
+}
+.up-right {
+  width: 100px;
+  background-color: #b6d8ed;
+}
+
+.down-left {
+  background-color: #e5d32e;
+}
+.down-center {
+  background-color: #ec8f9a;
+}
+.down-right {
+  width: 500px;
+  background-color: #8fdcad;
+}
 /* 回答はここに書いてね */
