--- a/layout_parts/q8/css/style.css
+++ b/layout_parts/q8/css/style.css
@@ -1,5 +1,275 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.inlineblock {
 
+}
+.small {
+  font-size: 16px;
+  border-radius: 3px;
+  height:26px;
+  line-height: 26px;
+  padding: 0px 15px;
+  margin-left: 10px;
+  display: inline-block;
+  vertical-align: middle;
+}
+.middle {
+  font-size: 20px;
+  border-radius: 5px;
+  height: 32px;
+  line-height: 32px;
+  padding: 0px 20px;
+  margin-left: 10px;
+  display: inline-block;
+  vertical-align: middle;
+}
+.large {
+  font-size: 24px;
+  border-radius: 7px;
+  height: 38px;
+  line-height: 38px;
+  padding: 0px 25px;
+  margin-left: 10px;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.in-white {
+  color:white;
+}
+.in-black {
+  color:#222;
+}
+
+.common {
+  background-color: #00bcd4;
+}
+.error {
+  background-color: #ff4081;
+}
+.disabled {
+  background-color: #e5e5e5;
+}
+.shadow {
+  background-color: white;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, .12),
+  0 1px 4px rgba(0, 0, 0, .12);
+}
+
+
+.clearfix:after {
+  content:"";
+  display: block;
+  clear: both;
+}
+/* input, button, textarea, select {
+  padding: 0;
+  background: none;
+  border: none;
+  border-radius: 0;
+  font-size: 16px;
+  outline: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+} */
+
+.q8-form {
+  width: 700px;
+  background-color: #ecf1f2;
+  margin: 0 auto;
+  padding: 20px;
+}
+.form-title {
+  position: relative;
+  margin-bottom:20px;
+}
+.form-title-text {
+  display: inline-block;
+  position: relative;
+  font-size:24px;
+  padding-right: 10px;
+  background-color: #ecf1f2;
+  font-weight: bold;
+  z-index: 1;
+}
+.form-title:after{
+  position: absolute;
+  left: 0px;
+  top:50%;
+  height:1px;
+  width: 100%;
+  background-color: #ccc;
+  content:"";
+  z-index: 0;
+}
+.form-left {
+  float:left;
+}
+.main-form {
+  margin-top: 20px;
+}
+.main-form .input-title {
+  float: left;
+  width:100px;
+  line-height: 25px;
+  text-align:right;
+}
+.q8__input--init {
+  padding: 0;
+  background: none;
+  border: none;
+  border-radius: 0;
+  font-size: 16px;
+  outline: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+.input-text {
+  float: right;
+  width: 180px;
+  font-size: 12px;
+  line-height: 12px;
+  padding: 5px;
+  background-color: #fff;
+  box-sizing: border-box;
+  border-radius: 3px;
+  border: none;
+}
+.required {
+  color: #f00;
+}
+.input-text:focus {
+  box-shadow:0 0 7px #00BCD4;
+}
+.input-radio {
+  float: right;
+  width: 180px;
+}
+.radio-button {
+  display: none;
+}
+.radio-button-text:before {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  height: 14px;
+  width: 14px;
+  margin-top:-8px;
+  border-radius: 50%; 
+  background-color: #fff;
+  border: 1px solid #ccc;
+  content:"";
+}
+.radio-button-text {
+  position: relative;
+  padding: 3px 3px 3px 20px;
+  display: inline-block;
+}
+.radio-button:checked+.radio-button-text:after {
+  position: absolute;
+  top: 50%;
+  left: 4px;
+  height: 8px;
+  width: 8px;
+  margin-top: -4px;
+  border-radius: 50%; 
+  background-color: #00bcd4;
+  content:"";
+}
+.main-form:first-child {
+  margin-top: 0px;
+}
+.input-select {
+  position: relative;
+}
+.input-select:after {
+  display: block;
+  position: absolute;
+  top: 4px;
+  right: 10px;
+  width: 8px;
+  height: 8px;
+  border-right: 2px solid #E5E5E5;
+  border-bottom: 2px solid #E5E5E5;
+  transform: rotate(45deg);
+  content: "";
+  pointer-events: none;
+}
+.checkbox-button {
+  display: none;
+}
+.checkbox-text {
+  position: relative;
+  display: inline-block;
+  padding-left: 24px;
+}
+.checkbox-text:before {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  left: 0px;
+  height: 16px;
+  width: 16px;
+  margin-top: -9px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  content:"";
+}
+.checkbox-button:checked + .checkbox-text:after {
+  position: absolute;
+  top: 50%;
+  left: 6px;
+  margin-top: -14px;
+  width: 8px;
+  height: 16px;
+  border-right: 3px solid #00BCD4;
+  border-bottom: 3px solid #00BCD4;
+  transform: rotate(45deg);
+  content: '';
+}
+.input-checkbox {
+  width: 300px;
+  float: right;
+  text-align: right;
+}
+.send-button {
+  text-align: right;
+}
+.button {
+  padding: 0 10px;
+  margin-top:20px;
+  border-radius: 5px;
+  background-color: #00BCD4;
+  color: #fff;
+  font-size: 16px;
+  line-height: 26px;
+  border:none;
+  cursor: pointer;
+}
+.button:active {
+  background-color: #FFF;
+  color: #00BCD4;
+}
+.form-right {
+  width:380px;
+  float:right;
+}
+.right-textarea {
+  width: 100%;
+  height: 203px;
+  padding: 10px;
+  border-radius: 3px;
+  background-color: #fff;
+  font-size: 12px;
+  box-sizing: border-box;
+  border:none;
+  resize: none;
+}
+.right-textarea:focus {
+  box-shadow:0 0 7px #00BCD4;
+}
 /* 回答はここに書いてね */
