layout_part 修正しました

--- a/layout_parts/q2/css/style.css
+++ b/layout_parts/q2/css/style.css
@@ -9,12 +9,12 @@
   background-color: #eff3f4;
 
 }
-.baroon {
+.image-left {
   float:left;
   margin-right: 20px;
   margin-bottom: 10px;
 }
-.bar {
+.image-right {
   float:right;
   margin-left: 20px;
   margin-bottom: 10px;
